src/scss/themes/_default.scss
// ----- Setup -----
$font-family-document: -apple-system, sans-serif;

$base-animation-speed: .2s;
$base-spacing-size: 1em;
$base-spacing-size-text: .5em;
$favicon-size: 16px;
$logo-size: 24px;
$icon-border-radius: 3px;

$spinner-size: 4em;
$spinner-border-color: rgba(#ccc, .9);
$spinner-border-size: 1em;

// font-sizes
$font-size-title: 1.125rem;			/* 18px / 16px */
$font-size-excerpt: .875rem;		/* 14px / 16px */
$font-size-excerpt-single: .75rem;	/* 12px / 16px */
$font-size-info: .75rem;			/* 12px / 16px */
$font-size-overlay-title: 1rem;		/* 16px / 16px */
$font-size-overlay-links: 1rem;		/* 16px / 16px */

// Theme-Colors
// light
$body-background-color: #fdfdfd;
$base-color: #333;
$base-color-info: #aaa;
$base-shadow: 0 2px 4px rgba(0,0,0,0.2);
$header-background-color: $body-background-color;
$header-border: 1px solid darken($body-background-color, 5%);
$base-link-color: $base-color;
$base-link-active-color: darken($base-link-color, 50%);
$base-link-visited-color: lighten($base-link-color, 50%);
$base-border: 1px solid #e4e4e4;
$overlay-background-color: $body-background-color;
$overlay-color: $base-color;

// dark
$body-background-color-dark: #272e35;
$base-color-dark: #cad4e0;
$base-color-info-dark: #a8c9ed;
$base-shadow-dark: 0 2px 4px rgba(0,0,0,0.4);
$header-background-color-dark: $body-background-color-dark;
$header-border-dark: 1px solid darken($body-background-color-dark, 5%);
$base-link-color-dark: $base-color-dark;
$base-link-active-color-dark: darken($base-link-color-dark, 20%);
$base-link-visited-color-dark: darken($base-link-color-dark, 20%);
$base-border-dark: 1px solid lighten($body-background-color-dark, 7%);
$overlay-background-color-dark: $body-background-color-dark;
$overlay-color-dark: $base-color-dark;


// ---- background
body {
	background-attachment:fixed;
	background-image: url('assets/images/world.svg');	// url is relative from index.php
	background-position: center center;
	background-repeat: no-repeat;
	background-size: 50%;
}

// ---- basic-grid
main li,
#application-header {
	display: grid;
	grid-column-gap: $base-spacing-size / 2;
}

main li {
	grid-template-columns: $favicon-size auto;
	padding: $base-spacing-size;
}
#application-header {
	grid-template-columns: $favicon-size * 3 auto $favicon-size * 3 ;
	// increase size clickable of elements
	a,
	label {	padding: $base-spacing-size; }
}

// ----- Body -----
body { font-family: $font-family-document; }


// ---- header ----
#application-header {
	top: 0;
	width: 100%;
	z-index: 2;
	div:nth-of-type(2) { position: relative; }	// allow larger logo to center
	img {
		@include align-centered;
		height: $logo-size;
		width: $logo-size;
	}
	a {
		display: inline-block;
		text-decoration: none;
	}
	label {
		cursor: pointer;		// simulate link-behavior
		float: right;
	}
}

// ---- Content ----
main {
	a {
		&:not(.source) { text-decoration: none; }
		&:hover,
		&:active { text-decoration: underline; }
	}

	p {
		margin-top: $base-spacing-size-text;
		&:last-of-type { margin-bottom: 0; }
	}

	.icon {
		background-clip: padding-box;
		border-radius: $icon-border-radius;
		display: inline-block;
		height: $favicon-size;
		margin-top: 3px;
		width: $favicon-size;
		img { border-radius: $icon-border-radius; }
	}

	.title {
		display: inline-block;
		font-size: $font-size-title;
		font-weight: 600;
		margin-top: 0;
		margin-bottom: $base-spacing-size-text / 2;
	}

	.excerpt { font-size: $font-size-excerpt-single; }

	.info {
		font-size: $font-size-info;
		margin: 0;
		a { color: inherit !important; }
	}

	.source { color: inherit; }
}

// ---- theme-switcher
#theme-switcher {
	&:not(:checked) + label .icon-moon { display: none; }
	&:checked + label .icon-sun { display: none; }
}

// ---- overlay ----
#application-overlay {
	left: $base-spacing-size;
	margin-top: $base-spacing-size;
	max-height: 80%;		// leave some space to the bottom (even in ladnscape-mode)
	overflow-y: auto;
	padding: $base-spacing-size;
	position: fixed;
	right: $base-spacing-size;
	// top is set via js
	transition: all, $base-animation-speed / 2;
	z-index: 1;		// place between header and content

	h2 {
		font-size: $font-size-overlay-title;
		font-weight: 600;
		margin: 0;
		padding-bottom: $base-spacing-size;
		text-align: center;
	}

	ul { @include ul-reset;	}

	a {
		display: block;
		font-size: $font-size-overlay-links;
		padding: $base-spacing-size 0;
		text-decoration: none;
	}
}

// hide/show overlay
#application-overlay.js-hidden {
	//right: 100%;
	//left: -100%;
	transform: scale(0);
}
#application-overlay {
	left: $base-spacing-size;
	right: $base-spacing-size;
	transform: scale(1);
}

// ---- loading-screen -----
#application-loading {
	border-width: 0;
	// place it above all elements
	height: 100%;
	left: 0;
	position: fixed;
	top: 0;
	width: 100%;
	transition: opacity, $base-animation-speed;
}
.spinner {
	@include align-centered;

	// use pseudo-element so we can position the spinner without affectiong the animation
	&:before {
		animation: rotation .4s infinite linear;
		border: $spinner-border-size solid $spinner-border-color;
		border-top-color: transparent;
		border-right-color: transparent;
		border-radius: 99em;
		content: '';
		display: block;
		height: $spinner-size;
		width: $spinner-size;
	}
}

// hide/show loading-screen
#application-loading.js-hidden {
	opacity: 0;
	z-index: -1;
}
#application-loading:not(.js-hidden) {
	opacity: 1;
	z-index: 2;
}

// ---- Footer ----
footer {

}

// ---- Responsive ----
// Mobile view
@include phone-only {

}

// Tablet portrait
@include tablet-portrait {

}

// Tablet landscape and up
@include tablet-landscape-up {
	main .excerpt { font-size: $font-size-excerpt; }
}

// Default View
@include default {
	li {
		div > * {
			float: left;
			max-width: 80ch;
			width: 45%;
		}
		.excerpt {
			margin-top: 0;
			margin-left: 5%;
		}
	}
}

// ---- themes
// theme-transition
html,
main ul,
#application-header,
.overlay { transition: color, background-color, border-color, $base-animation-speed; }

// Light
html.light {
	background-color: $body-background-color;
	border-bottom: $header-border;
	color: $base-color;
	#application-header {
		background-color: $header-background-color;
		box-shadow: $base-shadow;
		a { color: $base-link-color; }
	}
	main {
		a {
			color: $base-link-color;
			&:hover,
			&:active { color: $base-link-active-color !important; }
			&:visited { color: $base-link-visited-color; }
		}
		ul { background-color: $body-background-color; }
	}
	li { border-bottom: $base-border; }
	.icon { background-color: transparent; }
	.info { color: $base-color-info; }
	.source:hover { color: $base-link-active-color !important; }
	.overlay {
		background-color: $overlay-background-color;
		border: $base-border;
		box-shadow: $base-shadow;
		color: $overlay-color;
		h2 { border-bottom: $base-border; }
		a {
			color: $base-link-color;
			&:hover,
			&:active { color: $base-link-active-color; }
		}
	}
}

// Dark
html.dark {
	background-color: $body-background-color-dark;
	color: $base-color-dark;
	#application-header {
		background-color: $header-background-color-dark;
		border-bottom: $header-border-dark;
		box-shadow: $base-shadow-dark;
		a { color: $base-link-color-dark; }
	}
	main {
		a {
			color: $base-link-color-dark;
			&:hover,
			&:active { color: $base-link-active-color-dark !important; }
			&:visited { color: $base-link-visited-color-dark; }
		}
		ul { background-color: $body-background-color-dark; }
	}
	li { border-bottom: $base-border-dark; }
	main .icon { opacity: .5; }
	.icon { background-color: $base-color-dark; }
	.info { color: $base-color-info-dark; }
	.source:hover { color: $base-link-active-color-dark !important; }
	.overlay {
		background-color: $overlay-background-color-dark;
		border: $base-border-dark;
		box-shadow: $base-shadow-dark;
		color: $overlay-color-dark;
		h2 { border-bottom: $base-border-dark; }

		a {
			color: $base-link-color-dark;
			&:hover,
			&:active { color: $base-link-active-color-dark; }
		}
	}
}

// ---- fx when overlays are visible ----
.js-fx main { filter: blur(4px); }
// main { transition: filter $base-animation-speed ease; } // deactivated -> lacking performance

